# Single_process

./: README
project_template_cmake/: CMakeLists.txt  README  main.c
project_template_cmake/inc/: u_alsa_interface.h  u_msglist.h  u_wifi_utils.h
project_template_cmake/modules/: CMakeLists.txt
project_template_cmake/utils/: CMakeLists.txt  test.c  test.sh
project_template_cmake/utils/alsa/: CMakeLists.txt  alsa_interface.c
project_template_cmake/utils/cjson/: CMakeLists.txt
project_template_cmake/utils/control/: CMakeLists.txt
project_template_cmake/utils/database/: CMakeLists.txt
project_template_cmake/utils/datalist/: CMakeLists.txt
project_template_cmake/utils/mystr/: CMakeLists.txt
project_template_cmake/utils/ringbuf/: CMakeLists.txt
project_template_cmake/utils/ringbuf/doc/: test.c
project_template_cmake/utils/wav_parser/: CMakeLists.txt
project_template_cmake/utils/wifi/: CMakeLists.txt  wifi_utils.c
project_template_makefile/: Makefile
project_template_makefile/inc/: u_control.h  u_datalist.h  u_ringbuf.h  u_wav_parser.h
project_template_makefile/modules/: test.c
project_template_makefile/utils/: Makefile
project_template_makefile/utils/control/: control.c
project_template_makefile/utils/datalist/: datalist.c  msglist.c
project_template_makefile/utils/doc/: print_color.c
project_template_makefile/utils/ringbuf/: Makefile  ringbuf.c  tags
project_template_makefile/utils/wav_parser/: wav_parser.c
